[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01"
path = "src/bin/01_tcp_server/main.rs"

[[bin]]
name = "02"
path = "src/bin/02_tcp_client/main.rs"

[[bin]]
name = "03"
path = "src/bin/03_simple_future/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.37"
